Adding custom flags (#175)
* Adding ENABLE_ZGC

Adding the variable ENABLE_ZGC to enable the Z Garbage Collector startup flag, reducing considerably ram consumption on some rpis.

* Update start.sh

* First work on custom flag system

Still may need to find more flags on ZGC. There may be more flags that improve ZGCs performance.

* Cleanup and fix constants

Co-authored-by: AlexProgrammerDE <40795980+AlexProgrammerDE@users.noreply.github.com>